--- a/CarValet/Base.lproj/MainStoryboard_iPhone.storyboard
+++ b/CarValet/Base.lproj/MainStoryboard_iPhone.storyboard
@@ -133,7 +133,7 @@
         <!--Car Table View Controller-->
         <scene sceneID="eTf-La-OUg">
             <objects>
-                <tableViewController id="E1k-VN-nhc" customClass="CarTableViewController" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="CarTableViewController" id="E1k-VN-nhc" customClass="CarTableViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="75" sectionHeaderHeight="22" sectionFooterHeight="22" id="TSB-mN-VZj">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="436"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -311,7 +311,7 @@
         <!--View Car View Controller - View Car-->
         <scene sceneID="Eex-1o-pTv">
             <objects>
-                <tableViewController id="a1C-JB-vIa" customClass="ViewCarViewController" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="ViewCarViewController" id="a1C-JB-vIa" customClass="ViewCarViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="1Tf-0S-U7Q">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="436"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
